ecmascript/parser/tests/test262-error-references/fail/a77add5a553e5cce.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/a77add5a553e5cce.js:1:3
  |
1 | 0.toString
  |   ^

